# vk-voxel

./: .gitignore  Cargo.toml  README.md
src/: event_handler.rs  main.rs  util.rs
src/old/: growable_buffer.rs_old
src/physics/: solver.rs
src/render/: descriptor_sets.rs  fps_log.rs  mod.rs  renderer.rs  shader_module.rs  shader_resources.rs  shaders.rs  texture.rs  util.rs  vertex.rs
src/render/accumulation/: buffers.rs  grid.rs  mod.rs  surfel.rs
src/render/brick/: bitmap.rs  brickgrid.rs  brickmap.rs  feedback.rs  mod.rs
src/render/buffer/: allocator.rs  buffer_queue.rs  mod.rs  storage_buffer.rs  swap_buffer.rs  task_buffer.rs  uniform_buffer.rs  upload.rs  vertex_buffer.rs
src/render/camera/: camera.rs
src/render/mesh/: chunk_render.rs  cube.rs  mod.rs  model.rs  quad.rs  renderable.rs
src/server/: actions.rs  components.rs  hierarchy.rs  mod.rs  server.rs
src/shaders/: descriptor_sets.comp  final.frag  raytracing.comp  shader.frag  shader.vert  surfel.comp  util.comp
src/shaders/specialized/: block_shader.frag  block_shader.vert  deco_shader.frag  deco_shader.vert
src/util/: aab.rs  mod.rs  more_vec.rs  nd_array.rs  util.rs
src/vk/: renderer.rs
src/world/: block_access.rs  block_data.rs  chunk.rs  mod.rs  section.rs  terrain.rs  world.rs  world_blocks.rs
src/world/generation/: carver.rs  mod.rs  noise.rs  terrain.rs  transformer.rs
