[package]
name = "vk-voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.2"
bytemuck = { version = "1.12.3", features = ["derive"] }
glob = "0.3.1"
guillotiere = "0.6.2"
hecs = "0.9.1"
mimalloc = { version = "0.1.34", default-features = false }
ndarray = "0.15.6"
noise = "0.8.2"
once_cell = "1.17.0"
png = "0.17.7"
rayon = "1.6.1"
rgb = "0.8.34"
rustc_data_structures = "0.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
shaderc = "0.8.1"
smallvec = "1.10.0"
turborand = "0.10.0"
ultraviolet = { version = "0.9.0", features = ["int"] }
vulkano = "0.32.3"
vulkano-util = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27.5"

[profile.release]
debug = true
